--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -225,7 +225,7 @@ a:after {
 /* item Wrap */
 
 #itemwrap {
-	background: url(../img/item-bg.jpg) no-repeat center top;
+	background: url(../img/orange.jpg) no-repeat center top;
 	margin-top: 0px;
 	padding-top:70px;
 	text-align:center;
@@ -472,4 +472,12 @@ a:after {
 .team a {
 	padding-right: 10px;
 	padding-left: 10px;
+}
+
+.overlay {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	min-height: 500px;
+	background: rgba(0,0,0,.5);
 }
